--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -21,6 +21,7 @@ body {
       flex-shrink: 1,
       flex-basis: auto
       */
+      padding: 0.5rem 0 0;
     }
     &.content {
       flex: 1 1 auto;
