--- a/src/components/IconSelect/IconSelect.module.scss
+++ b/src/components/IconSelect/IconSelect.module.scss
@@ -1,49 +1,85 @@
 @use 'styles/colors';
+@use 'styles/media';
 
 .group {
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 5rem;
-}
-
-.input {
-  display: none;
-
-  // style label of checked input
-  &:checked + .label .icon {
-    background-color: colors.$bronto;
+  @include media.for-phone-only {
+    gap: 1rem;
   }
 }
 
-.icon {
-  display: inline-block;
-  border: 4px solid colors.$bronto-light;
-  background-color: colors.$bronto-light;
-  padding: 1rem;
-  border-radius: 10rem;
+.iconItem {
   &:hover {
-    border-color: colors.$bronto;
+    .icon {
+      border-color: colors.$bronto;
+    }
+  }
+  .input {
+    display: none;
+
+    // style label of checked input
+    &:checked + .label .icon {
+      background-color: colors.$bronto;
+      svg {
+        fill: white;
+      }
+    }
   }
 
-  svg {
-    fill: #fff;
+  .icon {
+    display: inline-block;
+    border: 4px solid colors.$bronto-light;
+    background-color: colors.$bronto-light;
+    padding: 1rem;
+    border-radius: 10rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+
+    &:hover {
+      border-color: colors.$bronto;
+    }
+
+    svg {
+      fill: colors.$bronto;
+      @include media.for-phone-only {
+        width: 30px;
+        height: 30px;
+      }
+    }
+    @include media.for-phone-only {
+      margin-bottom: 0;
+    }
   }
-}
 
-.label {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 14rem;
+  .label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 14rem;
+    cursor: pointer;
 
-  .title {
-    text-align: center;
+    .title {
+      text-align: center;
+    }
+
+    .detail {
+      text-align: center;
+      font-size: smaller;
+    }
+    @include media.for-phone-only {
+      flex-direction: row;
+      justify-content: space-around;
+      .title {
+        width: 60%;
+      }
+      max-width: unset;
+    }
   }
-
-  .detail {
-    text-align: center;
-    font-size: smaller;
+  @include media.for-phone-only {
+    width: 100%;
   }
 }
 
