--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -22,6 +22,7 @@ $edit: #fae572;
 
 $gray-100: rgb(244, 248, 250);
 $gray-200: rgb(226, 233, 238);
+$gray-250: rgb(196, 193, 193);
 $gray-300: rgb(152, 160, 163);
 $gray-400: rgb(102, 112, 116);
 $gray-500: rgb(55, 58, 63);
