Add qualified organizer to tests

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -91,6 +91,7 @@
 
       &.disabled {
         background-color: colors.$gray-100;
+        pointer-events: none;
         cursor: not-allowed;
         .title {
           color: colors.$gray-250;
