Fix colors of user's buttons, add simple tests for organizer with limits

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -67,11 +67,17 @@
       }
 
       // .detail {
-      //   // any need to style detail?
+      //   // any need to style detail?                
       // }
 
       &.createEvent {
         background-color: colors.$create-event-main;
+      }
+      &.myEvents {
+        background-color: colors.$create-event-main;
+      }
+      &.myProfile {
+        background-color: rgb(235, 207, 84);
       }
       &.editEvent {
         background-color: colors.$edit-event-main;
