--- a/src/index.scss
+++ b/src/index.scss
@@ -39,9 +39,12 @@ code {
     monospace;
 }
 
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
 @import 'styles/menu';
 @import 'styles/forms';
+
