--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -1,3 +1,4 @@
+@use 'styles/media';
 @use 'styles/colors';
 
 input:not([type]),
@@ -12,7 +13,7 @@ input[type='url'],
 input[type='datetime-local'],
 textarea,
 select {
-  border: 1px solid #ebeff4;
+  border: 2px solid colors.$bronto-light; // #ebeff4;
   border-radius: 6px;
   padding: 8px 12px;
 
@@ -29,4 +30,60 @@ input[type='reset'] {
   padding: 5px 2rem;
   cursor: pointer;
   text-align: center;
+}
+
+label {
+  &:has(input[type='radio']) {
+    font-size: 1.2rem;
+    line-height: 1.1;
+    cursor: pointer;
+    display: grid;
+    grid-template-columns: 1em auto;
+    gap: 0.7em;
+    margin-top: 1em;
+
+    margin-right: 0.8em;
+    @include media.for-phone-only {
+      margin-right: 0;
+    }
+
+    input {
+      cursor: pointer;
+      /* Add if not using autoprefixer */
+      -webkit-appearance: none;
+      appearance: none;
+      /* For iOS < 15 to remove gradient background */
+      background-color: #fff;
+      /* Not removed via appearance */
+      margin: 0;
+      font: inherit;
+      color: currentColor;
+      width: 1.3em;
+      height: 1.3em;
+      border: 0.15em solid colors.$bronto-light;
+      border-radius: 50%;
+      /* optically tune the alignment of the input in relation to the label text. */
+      transform: translateY(-0.075em);
+      display: grid;
+      place-content: center;
+      &::before {
+        content: '';
+        width: 0.7em;
+        height: 0.7em;
+        border-radius: 50%;
+        transform: scale(0);
+        transition: 120ms transform ease-in-out;
+        /* used instead of bg-color, to enable printing */
+        box-shadow: inset 1em 1em colors.$bronto-300;
+        /* to work in "Windows High Contrast Mode" */
+        background-color: colors.$bronto-300;
+      }
+
+      &:checked {
+        &::before {
+          transform: scale(1);
+        }
+      }
+    }
+  }
 }
