Check qualifications for adding a new event (#123)
* Check qualifocations for creating new event

* Add verification to path

* Add qualified organizer to tests

* Add proper qualifications to tests

* Fix colors of user's buttons, add simple tests for organizer with limits

* Add aria-label

Co-authored-by: Talita Andrzejewska <dzikilubiabloto@protonmail.com>

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -67,11 +67,17 @@
       }
 
       // .detail {
-      //   // any need to style detail?
+      //   // any need to style detail?                
       // }
 
       &.createEvent {
         background-color: colors.$create-event-main;
+      }
+      &.myEvents {
+        background-color: colors.$create-event-main;
+      }
+      &.myProfile {
+        background-color: rgb(235, 207, 84);
       }
       &.editEvent {
         background-color: colors.$edit-event-main;
@@ -87,6 +93,18 @@
       }
       &.simple {
         background-color: colors.$gray-300;
+      }
+
+      &.disabled {
+        background-color: colors.$gray-100;
+        pointer-events: none;
+        cursor: not-allowed;
+        .title {
+          color: colors.$gray-250;
+        }
+        &:hover {
+          margin: 0;
+        }
       }
     }
   }
