Improve localization flow

--- a/src/components/FormInputError/FormInputError.module.scss
+++ b/src/components/FormInputError/FormInputError.module.scss
@@ -20,6 +20,11 @@
     :global .quill {
       border-color: colors.$error;
     }
+    :global .customInput {
+      > div {
+        border-color: colors.$error;
+      }
+    }
   }
 }
 
