--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,8 +6,8 @@ $bronto: #080;
 $bronto-500: rgb(9, 80, 9);
 $bronto-400: rgb(0, 94, 0);
 $bronto-300: #080;
-$bronto-200: rgb(125, 211, 168);
-$bronto-100: #beecd5;
+$bronto-200: #6dd6a3;
+$bronto-100: #dcf5e8;
 $bronto-light: #beecd5;
 $bronto-super-light: #dcf5e8;
 
