--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/colors';
+@use 'styles/media';
 
 @mixin basic-button {
   border-radius: 8px;
@@ -12,6 +13,9 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  @include media.for-phone-only {
+    padding: 4px 4px;
+  }
 }
 
 @mixin primary-button {
