--- a/src/org/pages/CloseEvent/ParticipantsStep.module.scss
+++ b/src/org/pages/CloseEvent/ParticipantsStep.module.scss
@@ -1,3 +1,16 @@
+@use 'styles/colors';
+
 .inputTypeOptions {
-  margin: 1rem 0;
+  margin: 0;
+  margin-bottom: -12px;
+  width: 100%;
+}
+
+.tabFrame {
+  border: solid 3px colors.$gray-200;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top: none;
+  width: 100%;
+  margin-top: -4px;
 }
