--- a/src/components/NumberInput/NumberInput.module.scss
+++ b/src/components/NumberInput/NumberInput.module.scss
@@ -20,6 +20,7 @@
     height: 44px;
     &:hover {
       background-color: colors.$bronto;
+      transition: 220ms ease-in;
       color: white;
     }
   }
