--- a/src/components/ImageUpload/ImageUpload.module.scss
+++ b/src/components/ImageUpload/ImageUpload.module.scss
@@ -11,8 +11,17 @@
   justify-content: center;
   font-size: 1rem;
   cursor: pointer;
+  border-radius: 8px;
   svg {
     color: white;
+    scale: 1;
+    transition: 320ms ease-in-out;
+  }
+  &:hover {
+    svg {
+      scale: 1.2;
+      transition: 320ms ease-in-out;
+    }
   }
 }
 
