--- a/src/org/pages/ViewEvent/ViewEvent.module.scss
+++ b/src/org/pages/ViewEvent/ViewEvent.module.scss
@@ -109,6 +109,11 @@
         list-style-type: disc;
         margin-left: 1.5rem;
       }
+
+      ol {
+        list-style-type: decimal;
+        margin-left: 1.5rem;
+      }
     }
   }
 
