--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -21,7 +21,7 @@
 @mixin primary-button {
   color: white;
   background-color: colors.$bronto;
-  border: 4px solid colors.$bronto;
+  border: 3px solid colors.$bronto;
   &:hover {
     background-color: colors.$bronto-400;
   }
@@ -49,6 +49,11 @@
 
 .button {
   @include basic-button;
+  .icon {
+    color: colors.$bronto;
+    animation: animate 1s linear infinite;
+    width: 30px;
+  }
 }
 
 .primary {
@@ -71,9 +76,25 @@
   }
 }
 
+.disabled {
+  pointer-events: none;
+  color: colors.$gray-400;
+  background-color: colors.$gray-100;
+  border-color: colors.$gray-300;
+}
+
 :global .opportunitySection {
   :local .primary {
     background-color: colors.$opportunities;
     border-color: colors.$opportunities;
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
