--- a/src/components/FormLayout/FormLayout.module.scss
+++ b/src/components/FormLayout/FormLayout.module.scss
@@ -8,10 +8,11 @@
   min-width: 100%;
   counter-reset: section;
   border: 2px solid colors.$gray-200;
-  margin: 1rem 0;
-  padding: 0;
-  @include media.for-tablet-landscape-up {
+  margin: 1rem 0 0;
+  padding: 0 2rem 1rem;
+  @include media.for-big-desktop-up {
     padding: 2rem 2rem 4rem;
+    margin: 1rem 0;
   }
   gap: 1rem;
   display: flex;
@@ -26,7 +27,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem 0;
+  margin: 1rem 0 0;
+  @include media.for-big-desktop-up {
+    margin: 1rem 0;
+  }
 
   header {
     margin-top: 1.5rem;
